# hoshi

./: Cargo.toml  LICENSE  a.json  build.rs
i18n/: en-US.yml
locales/: en-US.yml  ja.yml  nl.yml
src/: assets.rs  context.rs  error.rs  event.rs  interaction.rs  lib.rs  localization.rs  macros.rs  main.rs  resolver.rs  response.rs  session.rs
src/autocompletes/: ffmpeg.rs  mod.rs
src/commands/: echo.rs  ffmpeg.rs  greet.rs  mod.rs  ping.rs  pixelsort.rs  roll.rs  snowman.rs  soupify.rs  speechbubble.rs  text.rs
src/commands/debug/: error.rs  mod.rs
src/components/: error.rs  mod.rs  ping.rs
src/events/: interaction.rs  mod.rs  ready.rs
src/events/interaction/: mod.rs
src/events/interaction/handlers/: application_command.rs  mod.rs
