[package]
name = "hoshi"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
dotenvy = "0.15.7"
include_dir = "0.7.4"
reqwest = "0.12.28"
ril = { version = "0.10.3", features = ["all"] }
rust-i18n = "3.1.5"
rustls = { version = "0.23.35", features = ["aws-lc-rs"] } # twilight wont work without this for some reason (on my pc)
shell-words = "1.1.1"
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full"] }
twilight-cache-inmemory = "0.17.1"
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder"] }
